--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en"> <!-- This is a comment!-->
+    <head>
+        <body>
+            <h1> Hello, World!</h1>
+        </body>
+    </head>    
+</html>
